tests/should_fail/bug/1565.stderr
error: Mutually recursive functions: when calling `<i32 as Tr>::f`...
  --> 1565.rs:11:5
   |
11 |     fn f(self) -> Int {
   |     ^^^^^^^^^^^^^^^^^
   |
note: then `<i32 as Tr>::f` uses the impl `<i32 as Tr>` via the call to `g`...
  --> 1565.rs:12:9
   |
12 |         g()
   |         ^^^
note: finally the method `<i32 as Tr>::f` might be called
  --> 1565.rs:11:5
   |
11 |     fn f(self) -> Int {
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

